# strand-selector

./: .gitignore  README.md  autosave.json  pyproject.toml  requirements.txt
results/IBD-CD18-T/: annotations.csv  autosave.json  selected_cells.txt
src/strand_selector/: app.py  main.py
src/strand_selector/config/: labels.py
src/strand_selector/gui/: main_window.py  pdf_viewer.py
src/strand_selector/io/: autosave.py  exporter.py  pdf_loader.py
src/strand_selector/models/: session.py
src/strand_selector/utils/: paths.py
